# sdnify

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  Makefile  Pipfile  README.md  VERSION  __version__.py  config.default  sdnify.py  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.semaphore/: semaphore.yml
docs/: TODO.md
fsm_templates/arista_eos/: show_interfaces.template  show_interfaces_transceiver_detail.template
fsm_templates/cisco_ios/: show_interfaces.template
fsm_templates/cisco_nxos/: show_interface_transceiver_details.template
fsm_templates/cisco_xr/: show_controllers_phy.template  show_inventory.template
reqs/: requirements-dev.txt  requirements.txt
sdnify/: __init__.py  __version__.py  cli.py
sdnify/fsm_templates/cisco_ios/: show_interface_transceiver.template
sdnify/fsm_templates/cisco_nxos/: show_interface.template
sdnify/fsm_templates/cisco_xr/: show_interfaces.template
sdnify/interfaces/: __init__.py  cli.py  core.py  slack.py
tests/: test_colors.py
tests/interfaces/cli/: test_colors.py
tests/interfaces/core/: test_dict_creation.py
tests/seed_data/fsm_output/: full_output.py
tests/seed_data/parsed_output/: interface_data.py
