[metadata]
license           = Apache License 2.0
license_file      = LICENSE
platforms         = any
description       =
long_description  = file: README.rst
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Network Automation

[tool:pytest]
testpaths       = tests
norecursedirs   = .git

[flake8]
exclude         = env,.git,.tox,docs
max-line-length = 88

[bdist_wheel]
universal = 0

